[package]
name = "regex-rs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "regex_rs"
crate-type = ["cdylib"]

[dependencies]
ouroboros = "0.15.6"
pyo3 = "0.19.1"
regex = { git = "https://github.com/circuitsacul/regex-adopt" }
