[package]
name = "regex-rs"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "regex_rs"
crate-type = ["cdylib"]

[dependencies]
ouroboros = "0.18.0"
pyo3 = "0.20.1"
regex = { git = "https://github.com/circuitsacul/regex-adopt" }
